@startuml
'https://plantuml.com/class-diagram

class AppCompatActivity
class AddTaskActivity {
    -button: Button
    #onCreate()
}
class AuthorizationActivity {
    -btnRegistration: Button
    -logInButton: Button
    #onCreate()
    -checkCredentialsData()
    -changeActivities()
    -getUserByCreditionals()
}
class ChangePasswordActivity {
    -button: Button
    #onCreate()
}
class GlobalData {
    +user: User
    +users: mutableListOf<User>
    +tasks: mutableListOf<Task>
}
class HomeActivity {
    #onCreate()
}
class ProfileActivity {
    -btnChangePassword: Button
    -btnExit: Button
    -tvUsername: TextView
    #onCreate()
    -getTasksForCurrentProject(): MutableList<Task>
}
class ProjectActivity {
    +adapter: TasksAdapter
    +tasks: MutableList<Task>
    -btnAddNewTask: Button
    #onCreate()
    -getTasksForCurrentProject(): MutableList<Task>
}
class ProjectListActivity {
    +adapter: ArrayAdapter<String>
    +projectsList = mutableListOf<String>
    -listView: ListView
    #onCreate()
}
class RegistrationActivity {
    -btnRegistration: Button
    #onCreate()
    -addNewUser(login: String, password: String)
}
class Task {
    -name: String
    -author: User
    -inProject: String
}
class TasksAdapter {
    -context: Context
    -layoutRes: Int
    -tasks: MutableList<Task>
    +getView(position: Int, converterView: View?, parent: ViewGroup): View
}
class User {
    -login: String
    -password: String
    -positionInTotal: Int
}

AppCompatActivity <|-- AddTaskActivity
AppCompatActivity <|-- AuthorizationActivity
AppCompatActivity <|-- ChangePasswordActivity
AppCompatActivity <|-- HomeActivity
AppCompatActivity <|-- ProfileActivity
AppCompatActivity <|-- ProjectActivity
AppCompatActivity <|-- ProjectListActivity
AppCompatActivity <|-- RegistrationActivity

AddTaskActivity -[hidden]down-> AuthorizationActivity
AuthorizationActivity -[hidden]down-> ChangePasswordActivity
HomeActivity -[hidden]down-> ProfileActivity
ProfileActivity -[hidden]down-> ProjectActivity
ProjectListActivity -[hidden]down-> RegistrationActivity

@enduml